client/src/app/components/list/list-item/list-item.component.scss
@import '../../../../styles.scss';

.item {
	padding: 10px;
	border-radius: 5px;
	text-decoration: none;
	color: $blackText;
	text-align: left;
	display: flex;
	flex-direction: row;
	min-height: 80px;
	flex-grow: 1;
	cursor: pointer;
}

.item:hover {
	background-color: rgb(235, 235, 235);
}

.icon {
	max-width: 80px;
	margin: auto 0px;
}

.details {
	flex-grow: 1;
	margin: auto 20px;
}

.header {
	font-size: 20px;	
}

.nsm-dialog {
	width: 90vw;
	max-width: 700px;
}

.modal-header {
	font-size: 32px;
	text-align: center;
	text-decoration: none;
}

.bottom-bar {
	display: flex;
	flex-direction: row-reverse;
	margin-top: 10px;
}

.close {
	border: 1px $black solid;
	border-radius: 5px;
	padding: 10px;
	cursor: pointer;
}

